--- a/modules/board/skins/LIFO_BOARD_EDITION/html/_list_normal.html
+++ b/modules/board/skins/LIFO_BOARD_EDITION/html/_list_normal.html
@@ -41,7 +41,7 @@
                     <block cond="$document_srl==$document->document_srl">&raquo;</block>
                     <block cond="$document_srl!=$document->document_srl">{$lang->notice}</block>
                 </td>
-                <td class="title cursor-pointer" cond="$val->type=='title' && $val->idx==-1" onclick="location.href='{getUrl('document_srl',$document->document_srl, 'listStyle', $listStyle, 'cpage','')}'">
+                <td class="title cursor-pointer" cond="$val->type=='title' && $val->idx==-1" onclick="location.href='{getUrl(document_srl, $document->document_srl, listStyle, $listStyle, cpage, undefined)}'">
                     <span class="badge badge-pill badge-warning d-block-inline d-sm-none">
                         {$lang->notice}
                     </span>
@@ -137,7 +137,7 @@
                     <block cond="$document_srl==$document->document_srl">&raquo;</block>
                     <block cond="$document_srl!=$document->document_srl">{$no}</block>
                 </td>
-                <td class="title cursor-pointer" cond="$val->type=='title' && $val->idx==-1" onclick="location.href='{getUrl('document_srl',$document->document_srl, 'listStyle', $listStyle, 'cpage','')}'">
+                <td class="title cursor-pointer" cond="$val->type=='title' && $val->idx==-1" onclick="location.href='{getUrl(document_srl,$document->document_srl, listStyle, $listStyle, cpage, undefined)}'">
                 {$document->getTitle()|noescape}
                     <a cond="$document->getCommentCount()" href="{getUrl('document_srl', $document->document_srl)}#comment" class="replyNum" title="Replies" style="color: inherit;">[{$document->getCommentCount()}]</a>
                     <a cond="$document->getTrackbackCount()" href="{getUrl('document_srl', $document->document_srl)}#trackback" class="trackbackNum" title="Trackbacks">[{$document->getTrackbackCount()}]</a>
