--- a/modules/wiki/skins/LIFO_wiki/document_compare.html
+++ b/modules/wiki/skins/LIFO_wiki/document_compare.html
@@ -2,6 +2,8 @@
 
 <load target="css/diff-styles.css" />
 
-<a href="{getUrl('act','dispWikiHistory','document_srl',$oDocument->document_srl,'history_srl','')}" class="btn">{$lang->cmd_back}</a>
-
 {$diff_html}
+
+<br/>
+<a href="{getUrl('act','dispWikiHistory','document_srl',$oDocument->document_srl,'history_srl','')}" class="btn btn-dark">{$lang->cmd_back}</a>
+
