--- a/modules/wiki/skins/LIFO_wiki/modify_tree.html
+++ b/modules/wiki/skins/LIFO_wiki/modify_tree.html
@@ -9,7 +9,7 @@
     </ul>
 
     <div class="treeUI">
-        <a href="{getUrl('act','dispWikiTreeIndex')}" class="btn">{$lang->cmd_back}</a>
+        <a href="{getUrl('act','dispWikiTreeIndex')}" class="btn btn-dark">{$lang->cmd_back}</a>
     </div>
 </div>
 
