--- a/modules/wiki/skins/LIFO_wiki/document_not_found.html
+++ b/modules/wiki/skins/LIFO_wiki/document_not_found.html
@@ -1,13 +1,13 @@
 <include target="header.html" />
     <div class="wikiRead">
-        <div class="wkReadHeader">
-			<div class="authorArea"></div>
-		</div>
 		<div class="wkReadBody">
 			<div class="xe_content">
-			{$oDocument->get('content')}
+				<div class="alert alert-primary">
+					<i class="xi-angle-right"></i> {$oDocument->get('content')}
+				</div>
+
 			<div class="command">
-				<a class="btn" href="{getUrl('act','dispWikiEditPage','entry',$oDocument->get('title'), 'document_srl', '')}">{$lang->cmd_create}</a>
+				<a class="btn btn-success" href="{getUrl('act','dispWikiEditPage','entry',$oDocument->get('title'), 'document_srl', '')}">{$lang->cmd_create}</a>
 			</div>
 			</div>
 		</div>
