--- a/modules/wiki/skins/LIFO_wiki/input_password_form.html
+++ b/modules/wiki/skins/LIFO_wiki/input_password_form.html
@@ -10,6 +10,6 @@
 	<input type="password" name="password" id="cpw" class="iText" />
 	<input class="btn" type="submit" value="{$lang->cmd_input}" />
 	<input type="hidden" name="xe_validator_id" value="modules/wiki/skins/xe_wiki" />
-	<a class="btn" href="{getUrl('act','')}">{$lang->cmd_cancel}</a>
+	<a class="btn btn-dark" href="{getUrl('act','')}">{$lang->cmd_cancel}</a>
 </form>
 <include cond="!$form_include" target="_footer.html" />
