--- a/modules/wiki/skins/LIFO_wiki/tree_list.html
+++ b/modules/wiki/skins/LIFO_wiki/tree_list.html
@@ -1,40 +1,50 @@
 <include target="header.html" />
 
-<div class="treeList">
-{@ $_pDepth = 0;}
+<h3 class="mb-0">{$lang->cmd_view_document_tree}</h3>
+</div>
+<div class="area p-2 mb-2">
+
+
+	<div class="treeList">
+		{@ $_pDepth = 0;}
 		<ul>
+		
 			<!--@foreach($document_tree as $key => $val)-->
-			<!--@if($_pDepth > $val->depth)-->
-			<!--@for($i=$val->depth; $i<$_pDepth; $i++)-->
-		</ul>
-		</li>
-		<!--@end-->
-		{@ $_pDepth = $val->depth}
-		<!--@end-->
-		<li>
-		<!--@if($val->childs)-->
-		<!--@end-->
-            <a href="{getSiteUrl($site_module_info->domain, '','mid',$mid,'document_srl',$val->document_srl)}">{$val->title}</a>
-		<!--@if($val->childs)-->
-		{@$_pDepth++}
-		<ul>
-			<!--@else-->
-			</li>
-			<!--@end-->
+
+				<!--@if($_pDepth > $val->depth)-->
+					<!--@for($i=$val->depth; $i<$_pDepth; $i++)-->
+					</ul>
+					</li>
+					<!--@end-->
+					{@ $_pDepth = $val->depth;
+						
+					}
+				<!--@end-->
+
+				<li>
+
+				<a href="{getSiteUrl($site_module_info->domain, '','mid',$mid,'document_srl',$val->document_srl)}">  {$val->title}</a>
+				<!--@if($val->childs)-->
+					{@$_pDepth++}
+					<ul>
+				<!--@else-->
+					</li>
+				<!--@end-->
+				
 			<!--@end-->
 			<!--@for($i=0;$i<$_pDepth;$i++)-->
+				</ul>
+			<!--@end-->
+			</li>
 		</ul>
+
+		<!--@if($grant->write_document)-->
+		<div class="treeUI">
+			<a href="{getUrl('act','dispWikiModifyTree')}" class="btn btn-warning">{$lang->cmd_modify}</a>
+			<button type="button" onclick="doRecompileTree()" class="btn btn-secondary">{$lang->cmd_remake_cache}</button>
+		</div>
 		<!--@end-->
-		</li>
-		</ul>
 
-    <!--@if($grant->write_document)-->
-    <div class="treeUI">
-        <a href="{getUrl('act','dispWikiModifyTree')}" class="btn">{$lang->cmd_modify}</a>
-        <button type="button" onclick="doRecompileTree()" class="btn">{$lang->cmd_remake_cache}</button>
-    </div>
-    <!--@end-->
-
+	</div>
 </div>
-
 <include target="footer.html" />
