--- a/modules/wiki/skins/LIFO_wiki/document_view.html
+++ b/modules/wiki/skins/LIFO_wiki/document_view.html
@@ -14,7 +14,7 @@
 
 	</script>
 <!--@end-->
-<div class="wikiRead px-3">
+<div class="wikiRead p-3">
 	<div class="wkReadBody mb-2 markdown-body">
 		<!--@if($oDocument->isSecret() && !$oDocument->isGranted())-->
 			<form action="./" method="get" ruleset="input_password" class="secretMessage">
@@ -40,7 +40,6 @@
 			<!--@else-->
 				{$oDocument->variables[content]}
 			<!--@endif-->
-				{$oDocument->getContent();}
 		<!--@end-->
 	</div>
 
