--- a/modules/calendar/skins/default/list.html
+++ b/modules/calendar/skins/default/list.html
@@ -106,6 +106,7 @@
 <div id="calendar"></div>
 </div>
 </div>
+<load target="///maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"/>
 <script type="text/javascript" src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.min.js"></script>
 <script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.js"></script>
 <script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.js"></script>
