--- a/modules/wiki/skins/LIFO_wiki/document_not_found.html
+++ b/modules/wiki/skins/LIFO_wiki/document_not_found.html
@@ -1,7 +1,7 @@
 <include target="header.html" />
     <div class="wikiRead">
 		<div class="wkReadBody">
-			<div class="xe_content">
+			<div class="">
 				<div class="alert alert-primary">
 					<i class="xi-angle-right"></i> {$oDocument->get('content')}
 				</div>
