--- a/modules/wiki/skins/LIFO_wiki/comment_edit.html
+++ b/modules/wiki/skins/LIFO_wiki/comment_edit.html
@@ -1,22 +1,13 @@
 <include target="header.html" />
 <!--@if($oSourceComment->isExists())-->
-<div class="fbList">
-    <div class="item itemOnly">
-	
-		<div class="itemAside">
-			<h4 class="author"><a href="#popup_menu_area" class="member_{$oSourceComment->getMemberSrl()}" onclick="return false">{$oSourceComment->getNickName()}</a></h4>
-			<p class="meta">
-				{$oSourceComment->getRegdate("Y.m.d H:i")}
-				<!--@if($grant->manager)-->
-				<br />{$oSourceComment->get('ipaddress')}
-				<!--@end-->
-			</p>
-		</div>
-		
-		<div class="iContent">
-			{$oSourceComment->getContent(false)}
-		</div>
-
+<div class="fbList">    					        
+    <h3 class="author card p-2">
+        <a cond="$oSourceComment->homepage" href="{$oSourceComment->homepage}" rel="nofollow noopener"><i class="xi-user"></i>{$oSourceComment->getNickName()}</a>
+        <strong cond="!$oSourceComment->homepage"><i class="xi-user"></i>{$oSourceComment->getNickName()}</strong>
+    </h3>
+    <div class="card p-2 mb-2" style="background-color: #f2f2f2;">            
+        {@print_r($oSourceComment->content)}
+        {$oSourceComment->content}           
     </div>
 </div>
 <!--@end-->
@@ -51,20 +42,34 @@
 		<input type="text" name="homepage" class="iText homePage" value="{$lang->homepage}" onfocus="this.value=''" />
 		<!--@end-->
 
-		<!--@if($is_logged)-->
-			<input type="checkbox" name="notify_message" value="Y" id="notify_message" class="inputCheck" />
-			<label for="notify_message">{$lang->notify}</label>
-		<!--@end-->
-			<input type="checkbox" name="is_secret" value="Y" id="is_secret" class="inputCheck" />
-			<label for="is_secret">{$lang->secret}</label>
+
+			<div class="form-row">
+				<!--// 로그인 후 -->
+				<div class="form-group mb-2 col-auto" cond="$is_logged">
+					<div class="item custom-control custom-checkbox custom-control-inline" >
+						<input type="checkbox" name="notify_message" value="Y" id="notify_message" class="custom-control-input" />
+						<label for="notify_message"  class="custom-control-label">{$lang->notify}</label>
+					</div>
+				</div>
+				<!--// 로그인과 상관 없이 -->
+				<div class="form-group mb-2 col-auto">
+					<div class="item custom-control custom-checkbox custom-control-inline" >
+						<input type="checkbox" name="is_secret" value="Y" id="is_secret" class="custom-control-input"/>
+						<label for="is_secret" class="custom-control-label">{$lang->secret}</label>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
-		<div class="wkNav">
-			<input type="submit" class="btn" value="{$lang->cmd_comment_registration}" />
+		<!--// 댓글 등록 버튼  -->
+		<div class="clearfix">
+			<div class="float-right">
+				<button type="submit" class="btn btn-success btn-sm"><i class="xi-message"></i> {$lang->cmd_comment_registration}</button>
+			</div>
 		</div>
 
 	</div>
-
 
 </form>
 
