--- a/modules/wiki/skins/LIFO_wiki/header.html
+++ b/modules/wiki/skins/LIFO_wiki/header.html
@@ -33,6 +33,9 @@
     });
 </script>
 
+<load target="///uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"/>
+<load target="///uicdn.toast.com/tui-tree/latest/tui-tree.js"/>
+<load target="///uicdn.toast.com/tui-tree/latest/tui-tree.css"/>
 
 
 <!--// 사용자 입력 헤더  -->
