--- a/modules/wiki/skins/LIFO_wiki/header.html
+++ b/modules/wiki/skins/LIFO_wiki/header.html
@@ -70,7 +70,7 @@
                     <input type="hidden" name="act" value="dispWikiContent" />
                     <input type="text" class="form-control mr-sm-2" name="entry" />
                     <div class="btn-group col col-sm-auto px-0" role="group">
-                        <input class="btn btn-outline-light mt-2 my-sm-0 w-100" type="submit" value="{$lang->cmd_search}" />
+                        <input class="btn btn-outline-light mt-2 my-sm-0 w-100" type="submit" value="{$lang->cmd_move}" />
                         <a class="btn btn-outline-light mt-2 my-sm-0 w-100" cond="$grant->manager" href="{getUrl('act','dispWikiAdminInsertWiki')}">{$lang->cmd_setup}</a>
                     </div>
                 </form>
