--- a/modules/wiki/skins/LIFO_wiki/left_side_tree_list.html
+++ b/modules/wiki/skins/LIFO_wiki/left_side_tree_list.html
@@ -1,7 +1,22 @@
-<div id="leftSideTreeList">
-	
-	<h3>Table of contents:</h3>
-	
+<div id="leftSideTreeList" class="card" style="width: 18rem;">
+	<div class="card-header">
+		Table of contents
+	</div>
+	<ul class="list-group list-group-flush">
+		<li class="list-group-item" id="wikiSearch">
+			<form action="{getUrl('mid', $mid, 'search_keyword', $search_keyword, 'act', 'dispWikiSearchResults', 'vid', $vid)}" method="get" class="form-row" >
+				<input type="hidden" name="search_target" value="title_content" />
+				<input type="hidden" name="act" value="dispWikiSearchResults" />
+				<input type="hidden" name="error_return_url" value="" />
+				<div class="col">
+					<input id="wikiSearchText" type="text" name="search_keyword" value="{$search_keyword}" class="xeDocsInputText form-control" />
+				</div>
+				<div class="col-auto">
+					<button id="wikiSearchButton" type="submit" class="btn btn-primary">{$lang->cmd_search}</button>
+				</div>
+			</form>
+		</li>
+	</ul>
     {@ $oDocumentModel = &getModel("document");}
     <!--@if($module_info->menu_style == 'classic')-->
 		{@ $_pDepth = 0;}
@@ -40,7 +55,7 @@
 		</ul>
 	<!--@else-->
 	<!--@if(count($list))-->
-	    <div>
+	    <div class="card-body">
 		<!--@foreach($list as $node)-->
 		<li class="wikiTreeNode" style="
 			<!--@if($node->type == 'root' || $node->type == 'active_root')-->
